using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class AnimTags : MonoBehaviour


{
    public enum AnimEnum {

    Walk,
    Dislike,
    Like,
    Eat,
    Idle

}

    public const string WALK = "Walk";
    public const string EAT = "Eat";
    public const string DISLIKE = "Dislike";
    public const string IDLE = "Idle";
    public const string LIKE = "Like";

}
